--- a/test/e2e/runner.html
+++ b/test/e2e/runner.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <title>End2end Test Runner</title>
     <script src="../lib/angular/angular-scenario.js" ng-autotest></script>
+    <script src="../e2e-utils/controls.js"></script>
     <script src="scenarios.js"></script>
-  </head>
-  <body>
-  </body>
+</head>
+<body>
+</body>
 </html>
